# ecdo-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md  download_data.sh
notebooks/: determine_X3_aam.ipynb  lod_aam_correlation.ipynb  resample_lod_eopc_04.ipynb
src/ecdo_analysis/: __init__.py  data_loaders.py
